--- a/home/display/composer.json
+++ b/home/display/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "quocvu/display",
+    "name": "quocvu/displays",
     "description": "Demo package",
     "type": "library",
     "license": "MIT",
